[package]
name = "benchmark-authority-id-intersection"
version = "0.1.0"
authors = ["Max Inden <mail@max-inden.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
primitives = { package = "substrate-primitives",  git = "https://github.com/paritytech/substrate", path= "./core/primitives", default-features = false }
criterion = "0.2"

[[bench]]
name = "intersection"
harness = false

[features]
default = ["primitives/std"]
